@@ -10,6 +10,7 @@ Version 1.3-svn:
      * decreased cost of the Mudcrawler from 9 to 5
  * user interface
    * disable inactive sliders instead of hiding them
+   * sliders can be adjusted with keyboard left and right
 
 Version 1.1.7:
  * campaigns
